--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
                 <section id="banner">
                     <div class="content">
                         <div style="text-align: center; margin-bottom: 40px;">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Bl32opqkvzk?si=tPqn2pK-1rz7Qacb"
+                            <iframe width="560" height="315" src="https://youtu.be/ItZlTixh6Bs?si=6JxWRqOJKbMMY9_8"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     allowfullscreen></iframe>
