--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
                 <section id="download" style="text-align: center; padding: 30px 0;">
                     <h2>Download My Resume</h2>
                     <p>You can download my full resume in PDF format here:</p>
-                    <a href="C:\Users\johar\OneDrive\Desktop\BAKWAAS\DTU\Modern Minimalist CV Resume (1).pdf" download="Suryansh_Johri_Resume.pdf"
+                    <a href="Suryansh's Resume.pdf" download="Suryansh's Resume.pdf"
                        style="display: inline-block; padding: 12px 20px; background-color: #333; color: white; text-decoration: none; border-radius: 5px; margin-top: 10px;">
                        📄 Download Resume
                     </a>
