--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
 
 
                 <!-- Banner: Video Resume -->
-                <section id="banner">
+                <!--section id="banner">
                     <div class="content">
                         <div style="text-align: center; margin-bottom: 40px;">
                             <iframe width="560" height="315" src="https://youtu.be/ItZlTixh6Bs?si=6JxWRqOJKbMMY9_8"
@@ -36,7 +36,7 @@
                             <p><strong>Video Resume</strong></p>
                         </div>
                     </div>
-                </section>
+            </section-->
 
                 <!-- Downloadable Resume Section -->
                 <section id="download" style="text-align: center; padding: 30px 0;">
