--- a/blog.html
+++ b/blog.html
@@ -44,16 +44,15 @@
                         </ul>
                     </article>
 
-                    <!-- Blog Post 2 -->
-                    <!--article>
-                        <a href="#" class="image"><img src="images/blog2.jpg" alt="Blog 2" /></a>
-                        <h3>Data Science Roadmap for 2025</h3>
-                        <p>Wondering how to become a data scientist in the current market? Here’s a practical roadmap I personally follow...</p>
+                  <!-- Blog Post 2 -->
+                    <article>
+                        <a href="blog2.html" class="image"><img src="images/blog2.png" alt="Blog 2" /></a>
+                        <h3>Story of my portfolio website </h3>
+                        <p>In this post, I’ll share how I created my own portfolio website — with nothing but basic HTML/CSS knowledge and guidance from ChatGPT</p>
                         <ul class="actions">
-                            <li><a href="#" class="button">Read More</a></li>
+                            <li><a href="blog2.html" class="button">Read More</a></li>
                         </ul>
-                    </article-->
-
+                    </article>
                     <!-- Blog Post 3 -->
                     <!--article>
                         <a href="#" class="image"><img src="images/blog3.jpg" alt="Blog 3" /></a>
