Add new blog post about life at DTU
Updated blog.html to include a new blog post about life at DTU as a Math student.

--- a/blog.html
+++ b/blog.html
@@ -54,14 +54,16 @@
                         </ul>
                     </article>
                     <!-- Blog Post 3 -->
-                    <!--article>
-                        <a href="#" class="image"><img src="images/blog3.jpg" alt="Blog 3" /></a>
+                    
+                    <article>
+                        <a href="blog 3.html" class="image"><img src="images/dtu.jpg" alt="Blog 3" /></a>
                         <h3>Life at DTU as a Math Student</h3>
                         <p>Sharing my personal experience and what it’s really like to pursue M.Sc. Mathematics at Delhi Technological University...</p>
                         <ul class="actions">
-                            <li><a href="#" class="button">Read More</a></li>
+                            <li><a href="blog 3.html" class="button">Read More</a></li>
                         </ul>
-                    </article-->
+                    </article>
+
 
                 </div>
             </section>
@@ -80,3 +82,4 @@
 
 </body>
 </html>
+
