Update projects.html with new project entries
Added new projects to the portfolio page, including HR Analytics and E-commerce Customer Behavior Analysis, with links and descriptions.

--- a/projects.html
+++ b/projects.html
@@ -27,51 +27,83 @@
 
 					<!-- Projects Section -->
 					<section id="projects">
-						<header class="major">
-							<h2 style="color:#2c3e50">My Projects</h2>
-						</header>
-						<div class="posts">
+    <header class="major">
+        <h2 style="color:#2c3e50">My Projects</h2>
+    </header>
 
-							<!--article>
-								<a href="#" class="image"><img src="images/project1.jpg" alt="Project 1" /></a>
-								<h3>Customer Segmentation using K-Means</h3>
-								<p>Used clustering algorithms to group customers based on their behavior and purchasing data. Tools: Python, Pandas, Scikit-learn, Matplotlib.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">View Project</a></li>
-								</ul>
-							</article>
+    <div class="posts">
 
-							<article>
-								<a href="#" class="image"><img src="images/project2.jpg" alt="Project 2" /></a>
-								<h3>Sales Dashboard using Excel & Power BI</h3>
-								<p>Designed a fully interactive dashboard to track regional sales, targets, and KPIs for a fictitious retail firm. Tools: Excel, Power BI.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">View Dashboard</a></li>
-								</ul>
-							</article>
+        <!-- HR Analytics SQL Project -->
+        <article>
+            <a href="https://github.com/suryansh-johri/HR-Analytics-SQL-Project-Employee-Manager-Department-Insights" 
+               class="image" target="_blank">
+                <img src="images/HR.jpg" alt="HR Analytics SQL Project" />
+            </a>
+            <h3>HR Analytics – SQL Project</h3>
+            <p>
+                Designed an HR relational database and solved real-world business queries involving
+                employee–manager hierarchy, department analysis, hiring trends, and audit simulations.
+                Applied complex JOINs and set operations.
+                <br><strong>Tech Stack:</strong> SQL (MySQL)
+            </p>
+            <ul class="actions">
+                <li>
+                    <a href="https://github.com/suryansh-johri/HR-Analytics-SQL-Project-Employee-Manager-Department-Insights" 
+                       class="button" target="_blank">
+                        View Project
+                    </a>
+                </li>
+            </ul>
+        </article>
 
-							<article>
-								<a href="#" class="image"><img src="images/project3.jpg" alt="Project 3" /></a>
-								<h3>Movie Recommendation System</h3>
-								<p>Built a content-based filtering system to recommend movies using cosine similarity and TF-IDF vectorization. Tools: Python, Scikit-learn, NLTK.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">View Code</a></li>
-								</ul>
-							</article>
+        <!-- E-commerce Customer Behavior Analysis -->
+        <article>
+            <a href="https://github.com/suryansh-johri/ecommerce-descriptive-statistics" 
+               class="image" target="_blank">
+                <img src="images/E COMMERCE.jpg" alt="E-commerce Customer Analysis" />
+            </a>
+            <h3>E-commerce Customer Behavior Analysis</h3>
+            <p>
+                Performed descriptive statistical analysis to study customer age distribution,
+                spending behavior, repurchase intervals, churn risk, and satisfaction patterns.
+                Used generative AI tools for assisted coding and analysis refinement.
+                <br><strong>Tech Stack:</strong> Python, Pandas, NumPy
+            </p>
+            <ul class="actions">
+                <li>
+                    <a href="https://github.com/suryansh-johri/ecommerce-descriptive-statistics" 
+                       class="button" target="_blank">
+                        View Project
+                    </a>
+                </li>
+            </ul>
+        </article>
 
-							<article>
-								<a href="#" class="image"><img src="images/project4.jpg" alt="Project 4" /></a>
-								<h3>Predictive Analytics on Exam Scores</h3>
-								<p>Performed linear regression to predict student exam scores based on study hours. Visualized model performance with residual plots. Tools: Excel, Python.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Explore</a></li>
-								</ul>
-							</article>
+        <!-- Blood Cancer Detection 
+        <article>
+            <a href="#" class="image">
+                <img src="images/medical-ai.jpg" alt="Blood Cancer Detection Project" />
+            </a>
+            <h3>Blood Cancer Detection using AI/ML (Ongoing)</h3>
+            <p>
+                Developing a machine learning classification model for early detection of blood cancer.
+                Involves data preprocessing, feature engineering, model training, and performance evaluation.
+                <br><strong>Tech Stack:</strong> Python, Machine Learning
+            </p>
+            <ul class="actions">
+                <li>
+                    <a href="#" class="button disabled">In Progress</a>
+                </li>
+            </ul>
+        </article>
+-->
+    </div>
+</section>
 
-						</div>
-					</section-->
 
-				</div>
+					
+
+				<div>
 			</div>
 
 		</div>
