Revise portfolio content and structure
Updated the portfolio content to reflect current academic status and aspirations in Data Analytics.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Suryansh's Portfolio</title>
@@ -46,6 +42,27 @@
 										</header>
 										<h2>About Me</h2>
 <p>
+  I’m an M.Sc. Mathematics student at Delhi Technological University (DTU), passionate about turning data into actionable insights that drive real-world decisions.
+ </p>
+ <p>
+
+<strong>Background</strong><br><br>
+
+Originally from Bareilly, Uttar Pradesh, I completed my schooling at BBL Public School in 2020, with a focus on Science and Computers, where my love for problem-solving began.
+</p>
+<p>
+<strong>Journey into Data Analytics</strong><br><br>
+
+My strong foundation in Mathematics naturally led me to Data Analytics. I'm currently honing my skills in Python and SQL to analyze complex datasets. I'm proud to be JAM 2025 and CUET-PG 2024 qualified , which reflects my academic commitment and drive.
+</p>
+<p>
+<strong>Aspiration</strong><br><br>
+
+My goal is to become a Data Analyst and use my analytical skills to uncover trends, solve business problems, and contribute to data-driven strategies.
+
+</p>
+<!--
+<p>
   I’m a 23-year-old second-year <strong>M.Sc. Mathematics</strong> student at <strong>Delhi Technological University</strong>, Delhi, India. Born and brought up in Bareilly, Uttar Pradesh, I completed my schooling in 2020 from BBL Public School with a focus on Science and Computers.
 </p>
 
@@ -60,6 +77,7 @@
 
 <p>
   I firmly believe that passion and determination can lead you to success.
+										-->
 </p>
 <br>
 <br>
