Update projects.html with new project details

--- a/projects.html
+++ b/projects.html
@@ -79,24 +79,30 @@
             </ul>
         </article>
 
-        <!-- Blood Cancer Detection 
-        <article>
-            <a href="#" class="image">
-                <img src="images/medical-ai.jpg" alt="Blood Cancer Detection Project" />
+        <!-- Trader Segmentation & Performance Analysis -->
+<article>
+    <a href="https://github.com/suryansh-johri/Trader-segmentation-performance-analysis" 
+       class="image" target="_blank">
+        <img src="C:\Users\johar\OneDrive\Desktop\portfolio-website\image (2).png" />
+    </a>
+    <h3>Trader Segmentation & Performance Analysis</h3>
+    <p>
+        Analyzed trader performance under different market sentiment regimes using
+        historical trading data and the Fear & Greed Index. Built trader segments
+        (frequent vs infrequent, high vs low leverage, consistent vs inconsistent performers)
+        and evaluated performance metrics such as PnL, win rate, and drawdown proxies.
+        <br><strong>Tech Stack:</strong> SQL (MySQL), Excel
+    </p>
+    <ul class="actions">
+        <li>
+            <a href="https://github.com/suryansh-johri/Trader-segmentation-performance-analysis" 
+               class="button" target="_blank">
+                View Project
             </a>
-            <h3>Blood Cancer Detection using AI/ML (Ongoing)</h3>
-            <p>
-                Developing a machine learning classification model for early detection of blood cancer.
-                Involves data preprocessing, feature engineering, model training, and performance evaluation.
-                <br><strong>Tech Stack:</strong> Python, Machine Learning
-            </p>
-            <ul class="actions">
-                <li>
-                    <a href="#" class="button disabled">In Progress</a>
-                </li>
-            </ul>
-        </article>
--->
+        </li>
+    </ul>
+</article>
+
     </div>
 </section>
 
