--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
 <article>
     <a href="https://github.com/suryansh-johri/Trader-segmentation-performance-analysis" 
        class="image" target="_blank">
-        <img src="https://github.com/suryansh-johri/suryansh-s-portfolio/blob/main/images/image%20(2).png" />
+        <img src="C:\Users\johar\OneDrive\Desktop\portfolio-website\images\image (2).png"/>
     </a>
     <h3>Trader Segmentation & Performance Analysis</h3>
     <p>
@@ -115,4 +115,3 @@
 		</div>
 	</body>
 </html>
-
