Fix HTML formatting and update project links

--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@
 <article>
     <a href="https://github.com/suryansh-johri/Trader-segmentation-performance-analysis" 
        class="image" target="_blank">
-        <img src="C:\Users\johar\OneDrive\Desktop\portfolio-website\images\image (2).png"/>
+        <img src="images/image (2).png" alt="Trader Segmentation and Performance Analysis"/ >
     </a>
     <h3>Trader Segmentation & Performance Analysis</h3>
     <p>
@@ -115,3 +115,4 @@
 		</div>
 	</body>
 </html>
+
